# tonatona

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md  cabal.project  stack.yaml  tonatona.cabal  tonatona.hsfiles
.github/workflows/: cabal-ci.yml  ci.yaml  haskell-ci.yml  stack-ci.yaml  stack-test.yaml  test.yaml
example/: Server.hs
sample/: .gitignore  LICENSE  package.yaml  stack.yaml
sample/app/: Main.hs
sample/src/TonaApp/: Db.hs  Main.hs
sample/test/: DocTest.hs  Spec.hs
src/: Tonatona.hs
test/readme/: package.yaml  readme.cabal
tonalude/: README.md  package.yaml  tonalude.cabal
tonalude/src/: Tonalude.hs
tonalude/src/Tonalude/: Extra.hs
tonalude/src/Tonalude/Prelude/: Display.hs  IO.hs  RIO.hs  Reexports.hs  Renames.hs  Text.hs  Trace.hs
tonalude/test/: Spec.hs
tonaparser/: LICENSE  Makefile  README.md  package.yaml  stack.yaml  tonaparser.cabal
tonaparser/example/: Main.hs
tonaparser/src/: TonaParser.hs
tonaparser/test/: DocTest.hs
tonatona/: README.md  package.yaml  stack.yaml  tonatona.cabal
tonatona-db/: README.md  stack.yaml  tonatona-db.cabal
tonatona-db-postgresql/: LICENSE  Makefile  README.md  package.yaml  tonatona-db-postgresql.cabal
tonatona-db-postgresql/src/Tonatona/Db/: Postgresql.hs
tonatona-db-sql/: Makefile  README.md  tonatona-db-sql.cabal
tonatona-db-sql/src/Tonatona/Db/: Sql.hs
tonatona-db-sqlite/: README.md  package.yaml  tonatona-db-sqlite.cabal
tonatona-db-sqlite/src/Tonatona/Db/: Sqlite.hs
tonatona-db/src/Tonatona/: Db.hs
tonatona-email/: Makefile  README.md  tonatona-email.cabal
tonatona-email-sendmail/: Makefile  README.md  package.yaml  tonatona-email-sendmail.cabal
tonatona-email-sendmail/src/Tonatona/Email/: Sendmail.hs
tonatona-email/src/Tonatona/: Email.hs
tonatona-env/src/Tonatona/: Environment.hs
tonatona-environment/: Makefile  README.md  stack.yaml  tonatona-environment.cabal
tonatona-environment/src/Tonatona/: Environment.hs
tonatona-logger/: LICENSE  Makefile  README.md  package.yaml  stack.yaml  tonatona-logger.cabal
tonatona-logger/src/Tonatona/: Logger.hs
tonatona-persistent-postgresql/: package.yaml  tonatona-persistent-postgresql.cabal
tonatona-persistent-postgresql/src/Tonatona/Persist/: Postgresql.hs
tonatona-persistent-sqlite/: Makefile  Setup.hs  package.yaml  stack.yaml  tonatona-persistent-sqlite.cabal
tonatona-persistent-sqlite/src/Tonatona/Persist/: Sqlite.hs
tonatona-sample/: Makefile  README.md  package.yaml  stack.yaml  tonatona-sample.cabal
tonatona-sample/app/: Main.hs
tonatona-sample/src/Tonatona/: Db.hs  Sample.hs
tonatona-servant/: Makefile  README.md  package.yaml  stack.yaml  tonatona-db.cabal  tonatona-servant.cabal
tonatona-servant/src/Tonatona/: Db.hs  Servant.hs
tonatona-servant/test/: DocTest.hs  doctests.hs
tonatona/src/: Tonatona.hs
tonatona/src/Tonatona/: IO.hs
tonatona/test/: DocTest.hs  Spec.hs
