name:                readme
version:             0.1.0.0
synopsis:            Test to make sure the code compiles in the README.md
homepage:            http://github.com/arow-oss/tonatona/#readme
license:             MIT
license-file:        LICENSE
author:              ARoW Co., Ltd.
maintainer:          arow.okamoto+github@gmail.com
copyright:           2018 ARoW Co., Ltd.
category:            Test
build-type:          Simple
cabal-version:       >=1.10

test-suite readme
  type:           exitcode-stdio-1.0
  main-is:        README.lhs
  build-depends:  base
                , markdown-unlit
                , persistent
                , persistent-template
                , text
                , tonaparser
                , tonatona
                , tonatona-db-sqlite
                , tonatona-logger
  ghc-options: -pgmL markdown-unlit

source-repository head
  type:     git
  location: https://github.com/arow-oss/tonatona
